# medhallu-eval

./: README.md  pyproject.toml
register/medhallu/: eval.yaml
src/medhallu/: __init__.py  medhallu.py
tests/: test_medhallu.py
