[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medhallu-eval"
version = "0.1.0"
description = "MedHallu hallucination detection eval implemented with Inspect AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.45",
    "datasets>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medhallu"]
